--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,13 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+.idea/
+.settings/
+.classpath
+.project
+eventhub-app.iml
+/bin/
+/obj/
+eventhub-listner.iml
+eventhub-service.iml
